docs: add swagger doc and only allow open docs on dev
